--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@ember/optional-features": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
+    "chunk-text": "^1.0.5",
+    "d3": "^6.1.0",
+    "dagre-d3": "^0.6.4",
+    "ember-auto-import": "^1.6.0",
     "ember-cli": "~3.14.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
@@ -35,6 +38,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-component-css": "^0.7.4",
     "ember-data": "~3.14.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^6.7.2",
