--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-auto-import": "^1.6.0",
     "ember-cli": "~3.14.0",
     "ember-cli-app-version": "^3.2.0",
+    "ember-cli-autoprefixer": "^1.0.2",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
